--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-22 20:22:48
+lastsearch = 2024-07-23 06:32:09
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-hong-160-x-200-cm-p7855505.html
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -183.3%%
-title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
+match = -188.9%%
+title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -27,9 +27,9 @@ title = Bộ Drap Cotton Satin LS1512-N07
 url = http://lavendervn.com/bo-drap-cotton-satin-ls1512-n07
 
 [choixe.vn]
-match = -100.0%%
-title = Chổi Xể – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
-url = https://choixe.vn/
+match = -138.9%%
+title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
+url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
 match = -72.2%%
@@ -37,14 +37,14 @@ title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
 url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -83.3%%
-title = Bộ ga chun Cotton chống thấm màu xanh dương
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-duong.html
+match = -72.2%%
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A114 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a114
+match = -94.4%%
+title = Bộ ga phủ tròn Mystic-T 28 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-tron-mystic-t-28
 
 [aeoneshop.com]
 match = -105.6%%
