--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-23 05:48:10
+lastsearch = 2024-07-23 06:31:39
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -239,7 +239,7 @@ url = https://www.scmp.com/lifestyle/fashion-luxury/article/2132184/how-internat
 [www.quora.com]
 match = 0.0%%
 title = 
-url = https://www.quora.com/Is-Dior-made-in-China
+url = https://www.quora.com/Where-are-Dior-clothes-made
 
 [www.huntvintage.co]
 match = -207.7%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -261.5%%
-title = South Korea: First lady's Dior bag shakes country's ...
+match = -230.8%%
+title = South Korea: First lady's Dior bag shakes ... - BBC
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
