--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-23 06:12:57
+lastsearch = 2024-07-23 06:30:32
 
 [shopee.vn]
 match = -48.0%%
@@ -22,9 +22,9 @@ title = Set chiếu điều hòa Hermon kèm gối HK2212 - Honper NK
 url = https://khoaibaby.vn/set-chieu-dieu-hoa-hermon-kem-goi-hk2212
 
 [vtvhyundai.vn]
-match = -8.0%%
-title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
+match = -24.0%%
+title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [voicon.net]
 match = -40.0%%
