--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-23 04:29:21
+lastsearch = 2024-07-23 06:26:56
 
 [demxanh.com]
-match = 11.8%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 38.2%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [shopee.vn]
 match = 0.0%%
@@ -97,9 +97,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [www.lazada.vn]
-match = 0.0%%
-title = Size 1.8x2m - Chiếu điều hòa tencel mủ cao su non Ben ...
-url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-mu-cao-su-non-ben-ben-ko-kem-vo-goi-chieu-cao-su-chieu-dieu-hoa-chieu-cao-su-non-i854756749.html
+match = -5.9%%
+title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
 
 [ru9.vn]
 match = 8.8%%
