--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-23 06:21:49
+lastsearch = 2024-07-23 06:31:30
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
 match = 8.0%%
@@ -22,9 +22,9 @@ title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ..
 url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
-match = -68.0%%
-title = Đệm Korea Tuấn anh gấp 3 mảnh, bông cứng, bảo hành 5 ...
-url = https://shopee.vn/Đệm-Korea-Tuấn-anh-gấp-3-mảnh-bông-cứng-bảo-hành-5-năm-giao-hàng-miễn-phí-đủ-size-nhận-đặt-theo-kích-thước-i.22640428.1263444075
+match = -40.0%%
+title = nệm tuấn anh giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=nệm tuấn anh
 
 [demkhangduy.com]
 match = 25.0%%
