--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-23 05:14:51
+lastsearch = 2024-07-23 06:29:25
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -15.0%%
+title = Robert Weinreb - UCSD Profiles
+url = https://profiles.ucsd.edu/robert.weinreb
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -113,8 +113,8 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 
 [cases.stretto.com]
 match = -90.0%%
-title = Case 23-10990 Doc 1 Filed 07/26/23 Page 1 of 260
-url = https://cases.stretto.com/public/x267/12381/PLEADINGS/1238107262380000000053.pdf
+title = Case 23-10988 Doc 1 Filed 07/26/23 Page 1 of 260
+url = https://cases.stretto.com/public/x267/12380/PLEADINGS/1238007262380000000051.pdf
 
 [www.west-cs.com]
 match = -100.0%%
