--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-23 06:18:29
+lastsearch = 2024-07-23 09:07:19
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -152.6%%
-title = Mẹ Ơi Có Biết - Bé Khánh Vy | Nhạc Thiếu Nhi Hay Nhất, Mẹ ...
-url = https://www.youtube.com/watch?v=4dXj1h8bQHs
+match = -142.1%%
+title = Album Nhạc Thiếu Nhi Bé XUÂN MAI vui nhộn 3 giờ cho bé ...
+url = https://www.youtube.com/watch?v=ZeK4jit08Rk
 
 [dochoihoangthu.com]
 match = -121.1%%
