--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-23 06:43:55
+lastsearch = 2024-07-23 09:08:16
 
 [vinatools.com]
-match = -140.0%%
-title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/
+match = -206.7%%
+title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/
 
 [www.vietnamairport.vn]
 match = -93.3%%
@@ -22,9 +22,9 @@ title = Hướng dẫn đi lại tại sân bay Nội Bài
 url = https://noibaiairport.vn/Transportation-to-and-from-Noibai-International-Airport-nid260.html
 
 [batdongsan.com.vn]
-match = -213.3%%
-title = Bán đất Himlam Lương Định Của, P. An Khánh Q2, MT D2 ...
-url = https://batdongsan.com.vn/ban-dat-duong-d2-phuong-an-khanh/b-himlam-luong-dinh-cua-p-khh-q2-mt-16m-4x23-15-8ty-0906997966-pr34187773
+match = -226.7%%
+title = ban nha duong pham van chieu phuong 16 go vap - Bán - tags
+url = https://batdongsan.com.vn/tags/ban/ban-nha-duong-pham-van-chieu-phuong-16-go-vap?price=7&areas=7
 
 [m.facebook.com]
 match = -233.3%%
