--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-22 23:40:33
+lastsearch = 2024-07-23 09:11:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -187.5%%
-title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
+match = -137.5%%
+title = Bus Vĩnh Phúc (VP01,03,04,05,06,07,08,09,10)
+url = https://www.facebook.com/groups/845021106177838/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -102,8 +102,8 @@ title = mibetel hct 40mg|Casino Online Châu Á: Đánh Thức Mọi ...
 url = https://tuyensinh.epu.edu.vn/xiazai/mibetel-hct-40mg.phtm
 
 [chuthapdotphcm.org.vn]
-match = -193.8%%
-title = Lớp Sơ cấp cứu cơ bản Khóa 11, ngày 06/7/2024 (thứ bảy)
+match = -187.5%%
+title = Lớp Sơ cấp cứu cơ bản Khóa 13, ngày 03/8/2024 (thứ bảy)
 url = https://chuthapdotphcm.org.vn/tin-tuc/thong-bao-chieu-sinh-lop-so-cap-cuu
 
 [bandantoc.soctrang.gov.vn]
@@ -542,9 +542,9 @@ title = Việt Nam là quốc gia năng động nhất, tăng trưởng nhanh nh
 url = https://xaydungchinhsach.chinhphu.vn/thu-tuong-gui-thong-diep-quan-trong-trong-phat-bieu-chinh-sach-tai-dai-hoc-danh-gia-nhat-xu-so-kim-chi-119240703153709673.htm
 
 [www.momo.vn]
-match = -87.5%%
-title = Ý nghĩa số Chủ đạo 8 trong Thần số học
-url = https://www.momo.vn/blog/than-so-hoc-so-8-c117dt187
+match = -37.5%%
+title = Lịch chiếu phim Lotte West Lake
+url = https://www.momo.vn/cinema/rap/lotte-cinema/lotte-west-lake-363
 
 [vietyen.bacgiang.gov.vn]
 match = -125.0%%
