--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-23 06:27:47
+lastsearch = 2024-07-23 09:06:56
 
 [chieutrucsaigon.com]
-match = 33.3%%
-title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
+match = 16.7%%
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [demxanh.com]
 match = -8.3%%
@@ -32,9 +32,9 @@ title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
 url = https://www.facebook.com/chieutregiare/
 
 [shopee.vn]
-match = 50.0%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -37.5%%
+title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
+url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
 
 [www.yellowpages.vn]
 match = -37.5%%
