--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-23 05:50:00
+lastsearch = 2024-07-23 09:05:54
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trướ
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = 13.3%%
-title = Con Gái Cao 1m7 Vứt
-url = https://www.tiktok.com/discover/con-gái-cao-1m7-vứt
+match = -246.7%%
+title = Luyện tập bước đi đẹp cho bộ đôi mẫu nhí thần thái Bảo Trân
+url = https://www.tiktok.com/@bybacademyvn/video/7349906430587178242
 
 [www.reddit.com]
 match = -120.0%%
