--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-23 02:16:47
+lastsearch = 2024-07-23 11:31:56
 
 [demxanh.com]
-match = 25.9%%
-title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
+match = 40.7%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [shopee.vn]
-match = -33.3%%
-title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = -37.0%%
-title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
+match = 29.6%%
+title = Chiếu điều hòa cao su non 1m8x2m - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
 
 [www.dienmayxanh.com]
 match = -48.1%%
@@ -52,9 +52,9 @@ title = Chiếu Điều Hòa Sợi Mây Tổng Hợp Cao Cấp ... - Babies.vn
 url = https://babies.vn/chieu-dieu-hoa-soi-may-tong-hop-cao-cap-chieu-dieu-hoa-thong-minh-thoang-khi-mat-ruoi-cho-mua-he
 
 [betiti.com]
-match = 68.2%%
-title = Chiếu điều hòa kèm gối
-url = https://betiti.com/san-pham/chieu-dieu-hoa-kem-goi/
+match = -29.6%%
+title = Chiếu Điều Hòa - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
+url = https://betiti.com/san-pham/chieu-dieu-hoa/
 
 [nemsaithanh.com]
 match = 46.2%%
