--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-23 10:41:31
+lastsearch = 2024-07-23 11:31:22
 
 [demxanh.com]
 match = 38.2%%
@@ -98,8 +98,8 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [www.lazada.vn]
 match = -5.9%%
-title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
+title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
 
 [ru9.vn]
 match = 8.8%%
@@ -120,4 +120,9 @@ url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 match = 11.8%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 1 - Nệm Uy Tín
 url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-1/
+
+[nemuytin.com]
+match = 11.8%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
+url = https://nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 
