--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-23 14:19:08
+lastsearch = 2024-07-23 14:46:40
 
 [www.tiktok.com]
-match = -11.8%%
-title = HOA fined me for this #hoa
-url = https://www.tiktok.com/@koltindarley/video/7317753084510342443?lang=en
+match = -170.6%%
+title = We costed our HOA 16%% of their ANNUAL income over a ...
+url = https://www.tiktok.com/@brainofreddit/video/7279632275313069358
 
 [casetext.com]
 match = -100.0%%
