--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-23 12:33:27
+lastsearch = 2024-07-23 14:50:03
 
 [demtot.com]
-match = 4.8%%
-title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
-url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
+match = 42.9%%
+title = Đệm lò xo túi Adaptive
+url = https://demtot.com/dem-lo-xo-tui-adaptive/
 
 [tuananh.vn]
 match = 52.4%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -119.0%%
-title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
-url = https://lombom.com/dem-lo-xo/
+match = -133.3%%
+title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
+url = https://lombom.com/dem-nem/page/2/
 
 [www.linkedin.com]
 match = 4.8%%
