--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-23 14:20:47
+lastsearch = 2024-07-23 14:44:10
 
 [noithathomy.com]
 match = -42.9%%
@@ -37,9 +37,9 @@ title = Thảm Trải Sàn 1 6
 url = https://websosanh.vn/s/thảm+trải+sàn+1+6.htm
 
 [www.tiktok.com]
-match = 23.8%%
-title = Who Sang Ogechi Karma
-url = https://www.tiktok.com/discover/who-sang-ogechi-karma
+match = -81.0%%
+title = Thảm bali trải sàn 3m.2m - #taoshop90 - #thảmbali
+url = https://www.tiktok.com/@tiemnhatao2019/video/7312084529114615042
 
 [iprice.vn]
 match = -19.0%%
