--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-23 14:28:50
+lastsearch = 2024-07-23 14:47:39
 
 [fsapartners.ed.gov]
 match = -45.0%%
 title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2023-04/2324FedSchoolCodeListQ3.pdf
+url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
 
 [finaid.org]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -15.0%%
-title = Abraham Palmer - UCSD Profiles
-url = https://profiles.ucsd.edu/abraham.palmer
+match = -5.0%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -6.2%%
-title = Spencer Behr, MD
-url = https://profiles.ucsf.edu/spencer.behr
+match = 11.1%%
+title = Marina Sirota, PhD
+url = https://profiles.ucsf.edu/marina.sirota
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -170.0%%
-title = Kurt Stenmark, MD Professor, Pediatrics-Critical Care Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/15570
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -390,4 +390,9 @@ url = https://www.nrc.gov/docs/ML1006/ML100601201.pdf
 match = -142.9%%
 title = E 3 O <
 url = https://www.wcu.edu/_files/academic-enrichment/UG_Catalog_91_92.pdf
+
+[www.elso.org]
+match = -115.0%%
+title = ELSO Center Directory | Extracorporeal Membrane ...
+url = https://www.elso.org/membership/centerdirectory.aspx
 
